# GameOpenGLv1

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/events/: events.c  events.h  rect.h
Core/window/: window.c  window.h
lib/lua/: CMakeLists.txt  lua.c
res/shaders/: main.vert  texture.vert  textureCamera.vert
src/: main.c  mainCPP.cpp
src/camera/: camera.c  camera.h
src/graphics/: shader.c  shader.h  texture.c  texture.h
src/loadsys/: loadTextures.c  loadTextures.h  loadshaders.c  loadshaders.h
src/primitives/: point.h  rect.h
src/window/: events.c  events.h  window.c  window.h
